--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -82,23 +82,44 @@ jobs:
     - name: Get Storage Account Name
       id: storage
       run: |
-        echo "Raw terraform output:"
-        terraform output
+        # Debug: Show terraform state content
+        echo "Terraform state content:"
+        cat terraform.tfstate
         
-        echo "JSON terraform output:"
-        terraform output -json
+        # Get storage account name using jq for reliable JSON parsing
+        STORAGE_ACCOUNT=$(cat terraform.tfstate | jq -r '.outputs.azure_storage_tfstate.value')
         
-        STORAGE_ACCOUNT=$(terraform output azure_storage_tfstate)
-
-        STORAGE_ACCOUNT=$(echo "$STORAGE_ACCOUNT" | tr -d '"' | tr -d '\n' | tr -d ' ')
+        echo "Extracted storage account name: $STORAGE_ACCOUNT"
         
-        echo "Extracted storage account: $STORAGE_ACCOUNT"
+        # Validate the storage account name
+        if [ -z "$STORAGE_ACCOUNT" ]; then
+          echo "Error: Failed to extract storage account name"
+          exit 1
+        fi
+        
+        if [ ${#STORAGE_ACCOUNT} -gt 24 ]; then
+          echo "Error: Storage account name too long: ${#STORAGE_ACCOUNT} characters"
+          exit 1
+        fi
+        
+        if [[ ! $STORAGE_ACCOUNT =~ ^[a-z0-9]*$ ]]; then
+          echo "Error: Storage account name contains invalid characters"
+          exit 1
+        fi
+        
+        # Set the output
         echo "storage_account=${STORAGE_ACCOUNT}" >> $GITHUB_OUTPUT
+        
+        # Debug: Show what we're setting
+        echo "Setting storage account to: ${STORAGE_ACCOUNT}"
       shell: bash
 
     - name: Create backend.tf
       run: |
-        echo "Using storage account: ${{ steps.storage.outputs.storage_account }}"
+        # Debug: Show what we received
+        echo "Received storage account: ${{ steps.storage.outputs.storage_account }}"
+        
+        # Create the backend configuration
         cat > backend.tf << EOF
         terraform {
           backend "azurerm" {
@@ -109,12 +130,18 @@ jobs:
           }
         }
         EOF
+        
+        # Verify the content
+        echo "Created backend.tf content:"
         cat backend.tf
 
     - name: Migrate State to Azure
       run: |
-        echo "Current directory contents:"
-        ls -la
         echo "Backend configuration:"
         cat backend.tf
-        terraform init -migrate-state -force-copy
+        
+        terraform init -migrate-state -force-copy || {
+          echo "Migration failed. Current directory contents:"
+          ls -la
+          exit 1
+        }
