--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -1,7 +1,22 @@
 name: 'Terraform Destroy'
 
 on:
-  workflow_dispatch:  # Only manual trigger
+  workflow_dispatch:
+    inputs:
+      resource_group_name:
+        description: 'Resource group name containing the tfstate'
+        required: true
+      storage_account_name:
+        description: 'Storage account name containing the tfstate'
+        required: true
+      container_name:
+        description: 'Container name containing the tfstate'
+        required: true
+        default: 'tfstate'
+      state_key:
+        description: 'State file name'
+        required: true
+        default: 'terraform.tfstate'
 
 permissions:
   contents: read
@@ -28,7 +43,11 @@ jobs:
       uses: hashicorp/setup-terraform@v2
 
     - name: Terraform Init
-      run: terraform init
+      run: terraform init \
+        -backend-config="resource_group_name=${{ inputs.resource_group_name }}" \
+        -backend-config="storage_account_name=${{ inputs.storage_account_name }}" \
+        -backend-config="container_name=${{ inputs.container_name }}" \
+        -backend-config="key=${{ inputs.state_key }}"
       id: init
 
     - name: Terraform Destroy
