--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -43,24 +43,11 @@ jobs:
       uses: hashicorp/setup-terraform@v2
 
     - name: Terraform Init
-      run: terraform init \
-        -backend-config="resource_group_name=${{ inputs.resource_group_name }}" \
-        -backend-config="storage_account_name=${{ inputs.storage_account_name }}" \
-        -backend-config="container_name=${{ inputs.container_name }}" \
-        -backend-config="key=${{ inputs.state_key }}"
+      run: terraform init -backend-config="resource_group_name=${{ inputs.resource_group_name }}" -backend-config="storage_account_name=${{ inputs.storage_account_name }}" -backend-config="container_name=${{ inputs.container_name }}" -backend-config="key=${{ inputs.state_key }}"
       id: init
 
     - name: Terraform Destroy
-      run: |
-        terraform destroy -auto-approve -input=false -no-color \
-          -var="prefix=${{ vars.TF_VAR_PREFIX }}" \
-          -var="label=${{ vars.TF_VAR_LABEL }}" \
-          -var="web_admin_username=${{ vars.TF_VAR_WEB_ADMIN_USERNAME }}" \
-          -var="web_admin_password=${{ secrets.TF_VAR_WEB_ADMIN_PASSWORD }}" \
-          -var="runner_admin_username=${{ vars.TF_VAR_RUNNER_ADMIN_USERNAME }}" \
-          -var="runner_admin_password=${{ secrets.TF_VAR_RUNNER_ADMIN_PASSWORD }}" \
-          -var="sql_admin_username=${{ vars.TF_VAR_SQL_ADMIN_USERNAME }}" \
-          -var="sql_admin_password=${{ secrets.TF_VAR_SQL_ADMIN_PASSWORD }}"
+      run: terraform destroy -auto-approve -input=false -no-color -var="prefix=${{ vars.TF_VAR_PREFIX }}" -var="label=${{ vars.TF_VAR_LABEL }}" -var="web_admin_username=${{ vars.TF_VAR_WEB_ADMIN_USERNAME }}" -var="web_admin_password=${{ secrets.TF_VAR_WEB_ADMIN_PASSWORD }}" -var="runner_admin_username=${{ vars.TF_VAR_RUNNER_ADMIN_USERNAME }}" -var="runner_admin_password=${{ secrets.TF_VAR_RUNNER_ADMIN_PASSWORD }}" -var="sql_admin_username=${{ vars.TF_VAR_SQL_ADMIN_USERNAME }}" -var="sql_admin_password=${{ secrets.TF_VAR_SQL_ADMIN_PASSWORD }}"
       id: destroy
       continue-on-error: true
 
