--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -132,13 +132,49 @@ jobs:
           exit 1
         fi
 
+    - name: Create terraform.tfvars
+      run: |
+        cat > terraform.tfvars << EOF
+        location="${{ inputs.location }}"
+        prefix="${{ inputs.prefix }}"
+        label="${{ inputs.label }}"
+        web_vm_size="${{ vars.WEB_VM_SIZE }}"
+        runner_vm_size="${{ vars.RUNNER_VM_SIZE }}"
+        web_vm_image_publisher="${{ vars.WEB_VM_IMAGE_PUBLISHER }}"
+        web_vm_image_offer="${{ vars.WEB_VM_IMAGE_OFFER }}"
+        web_vm_image_sku="${{ vars.WEB_VM_IMAGE_SKU }}"
+        sql_vm_size="${{ vars.SQL_VM_SIZE }}"
+        sql_vm_image_publisher="${{ vars.SQL_VM_IMAGE_PUBLISHER }}"
+        sql_vm_image_offer="${{ vars.SQL_VM_IMAGE_OFFER }}"
+        sql_vm_image_sku="${{ vars.SQL_VM_IMAGE_SKU }}"
+        web_admin_username="${{ secrets.WEB_ADMIN_USERNAME }}"
+        web_admin_password="${{ secrets.WEB_ADMIN_PASSWORD }}"
+        runner_admin_username="${{ secrets.RUNNER_ADMIN_USERNAME }}"
+        runner_admin_password="${{ secrets.RUNNER_ADMIN_PASSWORD }}"
+        sql_admin_username="${{ secrets.SQL_ADMIN_USERNAME }}"
+        sql_admin_password="${{ secrets.SQL_ADMIN_PASSWORD }}"
+        EOF
+      working-directory: ./eng/terraform
+
     - name: Terraform Destroy
       run: |
+        # Verify tfvars exists
+        if [ ! -f "terraform.tfvars" ]; then
+          echo "❌ terraform.tfvars file is missing!"
+          echo "Current directory contents:"
+          ls -la
+          exit 1
+        fi
+        
+        echo "📋 Current terraform.tfvars contents:"
+        cat terraform.tfvars
+        
         # First try to remove the VM extension
         echo "Attempting to remove VM extension..."
         terraform state rm module.runner_config.azurerm_virtual_machine_extension.script_install || true
         
         # Now attempt the destroy
+        echo "Starting terraform destroy..."
         terraform destroy -auto-approve -var-file=terraform.tfvars -parallelism=1
       id: destroy
       continue-on-error: true
@@ -148,6 +184,14 @@ jobs:
       if: steps.destroy.outcome == 'failure'
       run: |
         echo "Terraform destroy failed. Attempting recovery..."
+        
+        # Verify tfvars exists again
+        if [ ! -f "terraform.tfvars" ]; then
+          echo "❌ terraform.tfvars file is missing in recovery step!"
+          echo "Current directory contents:"
+          ls -la
+          exit 1
+        fi
         
         # List current state
         echo "Current state resources:"
