--- a/.github/workflows/install-ods.yml
+++ b/.github/workflows/install-ods.yml
@@ -22,7 +22,7 @@ on:
         default: |
           Write-Host "Starting script"
           $desktop = [Environment]::GetFolderPath("Desktop")
-          Write-Host "Desktop path: $desktop"
+          Write-Host ("Desktop path: " + $desktop)
           New-Item -Path "$desktop\test.txt" -ItemType File -Value "This is a test file" -Force
           Write-Host "File creation completed"
 
