--- a/.github/workflows/install-ods.yml
+++ b/.github/workflows/install-ods.yml
@@ -23,11 +23,11 @@ on:
           try { \
             Write-Host 'Starting script'; \
             $desktop = [System.Environment]::GetFolderPath('Desktop'); \
-            Write-Host ('Desktop path: ' + $desktop); \
-            New-Item -Path ($desktop + '\\test.txt') -ItemType File -Value 'This is a test file' -Force; \
+            Write-Host "Desktop path: $desktop"; \
+            New-Item -Path "$desktop\test.txt" -ItemType File -Value 'This is a test file' -Force; \
             Write-Host 'File creation completed' \
           } catch { \
-            Write-Host ('Error: ' + $_.Exception.Message) \
+            Write-Host "Error: $($_.Exception.Message)" \
           }
 
 env:
