--- a/.github/workflows/install-ods.yml
+++ b/.github/workflows/install-ods.yml
@@ -19,7 +19,7 @@ on:
       command_script:
         description: "The PowerShell command(s) to run on the VM"
         required: true
-        default: 'New-Item -Path "C:\test.txt" -ItemType File -Value "This is a test file" -Force'
+        default: 'New-Item -Path "C:/test.txt" -ItemType File -Value "This is a test file" -Force'
 
 env:
   ARM_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
