--- a/.github/workflows/install-ods.yml
+++ b/.github/workflows/install-ods.yml
@@ -16,10 +16,6 @@ on:
       resource_group:
         description: "The resource group of the VM"
         required: true
-      command_script:
-        description: "The PowerShell command(s) to run on the VM"
-        required: true
-        default: 'New-Item -Path "C:/test.txt" -ItemType File -Value "This is a test file" -Force'
 
 env:
   ARM_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
@@ -43,4 +39,4 @@ jobs:
             --command-id RunPowerShellScript \
             --name "${{ github.event.inputs.vm_name }}" \
             --resource-group "${{ github.event.inputs.resource_group }}" \
-            --scripts "${{ github.event.inputs.command_script }}"
+            --scripts 'Invoke-WebRequest -Uri "https://pkgs.dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_apis/packaging/feeds/EdFi@Release/nuget/packages/EdFi.Suite3.Installer.WebApi/versions/7.2.4/content" -OutFile "C:/EdFi.Suite3.Installer.WebApi.7.2.4.nupkg" -Headers @{"Authorization"="Basic "+[Convert]::ToBase64String([Text.Encoding]::ASCII.GetBytes(":YOUR_PAT_TOKEN_HERE"))}'
